--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,14 @@
         }
     ],
     "require": {
-        "silex/silex": "1.3.x-dev"
+        "silex/silex": "1.3.x-dev",
+        "symfony/security": "^2.7",
+        "symfony/twig-bridge": "^2.7",
+        "doctrine/dbal": "^2.5",
+        "doctrine/cache": ">=v1",
+        "monolog/monolog": "^1.15",
+        "chh/cache-service-provider": "~1.0",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
