--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,5 +5,5 @@
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule . /web/index.php [QSA,L]
+    RewriteRule . index.php [QSA,L]
 </IfModule>
